sandbox/output
AnagramTest.java:9: error: cannot find symbol
        int actual = Hiker.answer();
                     ^
  symbol:   variable Hiker
  location: class AnagramTest
1 error
